--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -20,7 +20,7 @@
                     <p class="title1"><b>you need in your</b></p>
                     <p class="title2"><b>own home.</b></p>
                     <nav>
-                    <button mat-raised-button class='serviceBtn'><a class="booklink" routerLink="/loginform">Book a Service</a></button></nav>
+                    <button mat-raised-button class='serviceBtn'><a class="booklink" routerLink="/login">Book a Service</a></button></nav>
                 </div>
             
         
