--- a/src/app/bookingform/bookingform.component.css
+++ b/src/app/bookingform/bookingform.component.css
@@ -1,180 +1,69 @@
-.example-container {
-  max-width: 100%;
-  min-height: 910px;
-  margin-top: 10px;
-  margin-left: 0;
-  border: 1px solid #E5E5E5;
-  border-radius: 30px;
+.sidenav-container {
+  height: 100%;
 }
-
-.mat-drawer
-{
-width: 280px;
-background-color: #EAE2B7;
+.sidenav{
+  width: fit-content;
+  width: 280px;
+  background-color: #EAE2B7;
 }
-
-.toolbar
-  {
-    background-color: #D62828;
-    margin-top: -20px;
-  }
-
-  .mat-drawer-content
-  {
-  height: 910px;
-  background-color: white;
-  }
-
-.logotxt
-{
-  font-family: Candara;
-  font-style: bold;
-  font-size: 30px;
-  color: #FFFFFF;
-  padding-top: 5px;
-  margin-left: 5px;
+.mat-sidenav-content{
+   height: 910px;
+   background-color: white;
 }
-
-.logo
-{
-  width: 170px;
-  height: 150px;
+.mat-toolbar{
+  background-color: #D62828;
+  width: 100%;
+}
+.logo{
+  width: 200px;
+  height: 180px;
   padding-top: 40px;
-  margin-left: 60px;
+  margin-left: 40px;
 }
-
-.inboxicon
-{
-  font-size: 30px;
-  color: white;
-  float: right;
-  margin-right: 160px;
-  margin-top: 10px;
+.nav-icon{
+  color: #003049;
+  font-size: 35px;
+  margin-left: 25px;
 }
-
-.logouticon
-{
-  font-size: 30px;
-  color: #FFFFFF;
-  margin-left: 1200px;
-  margin-top: 10px;
+.nav-btn{
+  color: #003049;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 25px;
+  margin-left: 25px;
 }
-
-  .dashboardside
-{
-margin-left: 0px;
-margin-top: 50px;
-text-align: justify;
+.dashboardside{
+  margin-left: 0px;
+  margin-top: 30px;
+  text-align: justify;
 }
-
 .dashboardside:hover
 {
     background-color: #c8c19c;
-    
     align-self: auto;
     width: 100%;
     height: 70px;
     margin-left: 0;
-    margin-top: 50px;
+    margin-top: 20px;
     text-align: justify;
-    
 }
 
-.dashlink
-{
-color: #003049;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-font-size: 18px;
-margin-left: 55px;
-text-decoration: none;
-margin-top: -33px;
+.spacer{
+  flex: 1 1 auto;
 }
-
-.homeicon
+.inboxicon
 {
-  color: #003049;
-  font-size: 35px;
-  padding-top: 20px;
-  margin-left: 55px;
+  font-size: 30px;
+  color: #14213D;
+  margin-right: 20px;
 }
-
-.bookingside
+.logoutBtn
 {
-  margin-left: 0px;
-  margin-top: 20px;
-  text-align: justify;
+  font-size: 20px;
+  color: antiquewhite;
 }
-
-.bookingside:hover
-{
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    
+.logoutBtn:hover{
+  background-color: black;
 }
-
-.bookinglink
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 55px;
-  text-decoration: none;
-  margin-top: -34px;
-}
-
-.bookingicon
-{
-  color: #003049;
-  font-size: 35px;
-  margin-top: 20px;
-  margin-left: 55px;
-}
-
-   
-.profileside
-{
-  margin-left: 0px;
-  margin-top: 20px;
-  text-align: justify;
-
-}
-
-.profileside:hover
-{
-    background-color: #c8c19c;
-    width: 100%;
-    height: 70px;
-    margin-left: 0;
-    margin-top: 20px;
-    
-}
-.profileicon
-{
-  color: #003049;
-  font-size: 35px;
-  margin-top: 20px;
-  margin-left: 55px;
-}
-
-.profilelink
-{
-  color: #003049;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 55px;
-  text-decoration: none;
-  margin-top: -34px;
-}
-  .mat-tab-group
-  {
-      width: 1000px;
-      margin-top: 50px;
-      margin-left: 70px;
-  }
-  
   .services
   {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
