--- a/src/app/profileform/profileform.component.css
+++ b/src/app/profileform/profileform.component.css
@@ -1,169 +1,66 @@
-.example-container {
-    max-width: 95%;
-    min-height: 910px;
-    margin-top: 10px;
-    margin-left: 50px;
-    border: 1px solid #E5E5E5;
-    border-radius: 30px;
-  }
-  
-  .mat-drawer
-  {
+.sidenav-container {
+  height: 100%;
+}
+.sidenav{
+  width: fit-content;
   width: 280px;
-  background-color: #14213D;
-  }
-  
-  .mat-drawer-content
-  {
-  height: 910px;
-  background-color: white;
-  }
-  
-  .logo
-  {
-    width: 170px;
-    height: 90px;
-    margin-top: 80px;
-    margin-left: 50px;
-  }
-  
-  .dashboardside
-  {
+  background-color: #EAE2B7;
+}
+.mat-sidenav-content{
+   height: 910px;
+   background-color: white;
+}
+.mat-toolbar{
+  background-color: #D62828;
+  width: 100%;
+}
+.logo{
+  width: 200px;
+  height: 180px;
+  padding-top: 40px;
   margin-left: 40px;
-  
-  }
-  .dashBtn
-  {
-  color: white;
+}
+.nav-icon{
+  color: #003049;
+  font-size: 35px;
+  margin-left: 25px;
+}
+.nav-btn{
+  color: #003049;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 120px;
-  }
-  
-  .homeicon
-  {
-    color: white;
-    font-size: 25px;
-  }
-  
-
-  
-  .bookingside
-  {
-  margin-left: 40px;
-  
-  }
-  
-  .bookingicon
-  {
-    color: white;
-    font-size: 25px;
-  }
-  
-  .bookingBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
+  font-size: 25px;
+  margin-left: 25px;
+}
+.dashboardside{
+  margin-left: 0px;
   margin-top: 30px;
-  }
-  
-  .profileside
-  {
-  margin-left: 40px;
-  
-  }
-  
-  .profileicon
-  {
-    color: white;
-    font-size: 25px;
-  }
-  
-  .profileBtn
-  {
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 18px;
-  margin-left: 10px;
-  margin-top: 30px;
-  }
-  
-  .profileLbl
-  {
+  text-align: justify;
+}
+.dashboardside:hover
+{
+    background-color: #c8c19c;
+    align-self: auto;
+    width: 100%;
+    height: 70px;
+    margin-left: 0;
+    margin-top: 20px;
+    text-align: justify;
+}
 
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 30px;
-    color: #14213D;
-    margin-top: 40px;
-    margin-left: 50px;
-    }
-  .inboxicon
-  {
-    font-size: 30px;
-    color: #14213D;
-    float: right;
-    margin-right: 200px;
-    margin-top: -53px;
-  }
-  
-  .logouticon
-  {
-    font-size: 30px;
-    color: #14213D;
-    float: right;
-    margin-right: 140px;
-    margin-top: -53px;
-  }
-  
-  .logoutBtn
-  {
-    font-size: 18px;
-    color: #14213D;
-    float: right;
-    margin-right: 50px;
-    margin-top: -55px;
-  }
-  
-  .dashlink
-  {
-      color: white;
-      text-decoration: none;
-      
-  }
-  
-  .bookinglink
-  {
-  color: white;
-  text-decoration: none;
-  }
-  
-  .profilelink
-  {
-      color: white;
-      text-decoration: none;
-  }
-      
-  .dashlink:hover 
-  {
-      background-color: #FCA311;
-      color: #14213D;
-     
-  }
-  
-  .bookinglink:hover 
-  {
-      background-color: #FCA311;
-      color: #14213D;
-     
-  }
-  
-  .profilelink:hover 
-  {
-      background-color: #FCA311;
-      color: #14213D;
-     
-  }
-  
+.spacer{
+  flex: 1 1 auto;
+}
+.inboxicon
+{
+  font-size: 30px;
+  color: #14213D;
+  margin-right: 20px;
+}
+.logoutBtn
+{
+  font-size: 20px;
+  color: antiquewhite;
+}
+.logoutBtn:hover{
+  background-color: black;
+}
